# NovaDev

./: README.md
agentic_framework/: .env  .gitignore  NOVA_BEAM_EXPERT_GUIDE.md  README.md  cleanup_agents.py  pyproject.toml  test_imports.py
agentic_framework/app/: demo.py  framework.py  main.py
agentic_framework/app/agents/: base_agent.py  concierge_agent.py
agentic_framework/app/mcp/: exabeam_client.py
agentic_framework/nova_agents/: README.md  agent.yaml  demo.py  deploy.py  final_test.py  nova_framework.py  requirements.txt  test_agentspace_integration.py  test_auth.py  test_datastore_direct.py  test_detection.py  test_knowledge_direct.py  test_knowledge_framework.py  test_lateral_movement.py  test_nova_final.py  test_query.py
agentic_framework/nova_agents/agents/: knowledge_agent.py  routing_agent.py
agentic_framework/nova_agents/data/: datastore_client.py
agentic_framework/nova_agents/tools/: __init__.py  adk_search_tool.py  beam_knowledge_tool.py  debug_tool.py  list_rules_tool.py
standalone-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  test_comprehensive.py
standalone-mcp-server/config/: nginx.conf
standalone-mcp-server/scripts/: generate_token.py  setup.sh  test_connection.py  test_vault.py
standalone-mcp-server/src/: exabeam_client.py  main.py  mcp_server.py  vault_client.py
standalone-mcp-server/tests/: test_server.py
