[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
google-cloud-aiplatform = "^1.109.0"
mcp = "^1.12.4"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
asyncio-mqtt = "^0.16.2"
google-adk = "^1.10.0"
aiohttp = "^3.12.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
